--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-feature android:glEsVersion="0x00020000" />
     
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name="com.ar4android.cameraAccessJME.CameraAccessJMEActivity" >
+        <activity android:label="@string/app_name" android:name="com.ar4android.cameraAccessJME.Camera2AccessJMEActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
