--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
 	<uses-feature android:name="android.hardware.camera" /> 
 	
 	<uses-feature android:glEsVersion="0x00020000" />
-    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:label="@string/app_name" android:name="com.ar4android.cameraAccessJME.Camera2AccessJMEActivity" >
             <intent-filter>
